--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "r3f-perf": "^7.1.2",
     "vite": "^5.1.4",
     "vite-plugin-glsl": "^1.2.1"
   }
